--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,4 @@
 RewriteEngine On
 RewriteCond %{SERVER_PORT} 80
 RewriteRule ^(.*)$ https://house-mate.com.au/$1 [R,L]
+Redirect 301 / https://house-mate.com.au/
